shield jumping issue, plus other small things

--- a/sites/all/themes/cp_theme/forms.css
+++ b/sites/all/themes/cp_theme/forms.css
@@ -3,7 +3,7 @@
 
 .section-cp .fieldset-wrapper, .section-cp div.spaces-block-customizer, .section-cp div.description  {
 	padding: 4px;
-	margin-bottom: 1.5em;
+	margin-bottom: 3em;
 	margin-left: 190px;
 	margin-top: -28px;
 	}
@@ -14,7 +14,7 @@
 	}
 
 .section-cp div.form-item {
-	margin: auto;
+	margin: 0 1em 0 0;
 	border: none;
   }
 
@@ -162,3 +162,16 @@ div.ctools-modal-content .modal_col div.form-item .form-item {
 div.ctools-modal-content .modal_col .form-item label {
   width: auto;
   }
+
+/* USER CREATION */
+
+div.ctools-modal-content #ucreate-user-form .form-item label {
+  float: none;
+  width: auto;
+  }
+
+#vsite-users-title-items .content-add-more {
+   padding: 30px 0;
+   text-align:right;
+   }
+
