--- a/sites/all/themes/scholar_base/modal.css
+++ b/sites/all/themes/scholar_base/modal.css
@@ -119,7 +119,7 @@ div.ctools-modal-content .resizable-textarea {
 
 
 #modalContent {
-  padding: 0 40px 40px 40px;
+  padding: 0 40px 35px 40px;
   background: transparent;
   }
 
@@ -143,7 +143,7 @@ div.ctools-modal-content .resizable-textarea {
 
 #ctools-bottom {
   width:auto;
-  height: 40px;
+  height: 35px;
   right: 40px;
   left: 40px;
   top: auto;
